--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ build/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/gradle.xml
+.idea/kotlinc.xml
+.idea/misc.xml
 .idea/libraries/
 *.iws
 *.iml
